2012-08-03  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* spawn.cc (child_info_spawn::worker): Put back a minor variation of
	Corinna's test for detecting a background process when starting a
	non-cygwin process.

2012-08-01  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/socket.h (MSG_BCAST): Define.
	(MSG_MCAST): Define.

2012-08-01  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_socket::recv_internal): Add bool parameter.
	Add regparm attribute.
	* fhandler_socket.cc (fhandler_socket::read): Call recv_internal with
	second parameter set to false.
	(fhandler_socket::readv): Ditto.
	(fhandler_socket::recvfrom): Ditto.
	(fhandler_socket::recv_internal): Convert use_recvmsg from local
	variable to parameter.  Use as request for using WSARecvMsg.  Only
	fail if WSARecvMsg can't be loaded and wsamsg->Control.len > 0,
	otherwise use WSARecv{From}.  Restrict dwFlags to MSG_PEEK when using
	WSARecvMsg.
	(fhandler_socket::recvmsg): Prefer using WSARecvMsg.  Change priority
	of tests for not using WSARecvMsg.  Call recv_internal with second
	parameter set accordingly.

2012-08-01  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Semi-revert patch from 2012-07-01, assuming the previous
	patch to etc::dir_changed fixes the underlying issue.

2012-07-31  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (etc::dir_changed): Revert muto changes since function is
	called under lock condition anyway.

2012-07-31  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (etc::dir_changed): Change `io' to a static NO_COPY
	variable.  Explain why.  Add a muto to guard overwriting the changed_h
	handle by multiple concurrent threads.
	* path.h (class etc): Drop unused changed_h member.

2012-07-30  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* winlean.h: Define constant which will be needed eventually.  Remove
	hack in favor of another hack.
	* lib/crt0.h: Use "winlean.h".

2012-07-30  Christopher Faylor  <me.cygwin2012@cgf.cx>
